// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/workers/package/index findUpgrades(config) returns array if upgrades found 1`] = `
Array [
  "semanticCommits",
  "semanticPrefix",
  "recreateClosed",
  "rebaseStalePrs",
  "prCreation",
  "automerge",
  "automergeType",
  "branchName",
  "commitMessage",
  "prTitle",
  "prBody",
  "lazyGrouping",
  "groupName",
  "groupSlug",
  "group",
  "labels",
  "assignees",
  "reviewers",
  "depName",
  "repositoryUrl",
]
`;

exports[`lib/workers/package/index findUpgrades(config) returns error if no npm dep found 1`] = `
Array [
  Object {
    "assignees": Array [],
    "automerge": "none",
    "automergeType": "pr",
    "branchName": "renovate/{{depName}}-{{newVersionMajor}}.x",
    "commitMessage": "{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}",
    "depName": "foo",
    "group": Object {
      "branchName": "renovate/{{groupSlug}}",
      "commitMessage": "{{semanticPrefix}}Renovate {{groupName}} packages",
      "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request renovates the package group \\"{{groupName}}\\".

{{#each upgrades as |upgrade|}}
-   [{{upgrade.depName}}]({{upgrade.repositoryUrl}}): from \`{{upgrade.currentVersion}}\` to \`{{upgrade.newVersion}}\`
{{/each}}

{{#unless isPin}}
### Commits

{{#each upgrades as |upgrade|}}
{{#if upgrade.releases.length}}
<details>
<summary>{{upgrade.githubName}}</summary>
{{#each upgrade.releases as |release|}}

#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}){{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}
{{/each}}
{{/unless}}
<br />

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://keylocation.sg/our-tech/renovate).",
      "prTitle": "{{semanticPrefix}}Renovate {{groupName}} packages",
      "recreateClosed": true,
    },
    "groupName": null,
    "groupSlug": null,
    "labels": Array [],
    "lazyGrouping": true,
    "message": "Failed to look up dependency",
    "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request updates dependency [{{depName}}]({{repositoryUrl}}) from version \`{{currentVersion}}\` to \`{{newVersion}}\`
{{#if releases.length}}

### Commits

<details>
<summary>{{githubName}}</summary>

{{#each releases as |release|}}
#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}) {{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}
<br />

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://keylocation.sg/our-tech/renovate).",
    "prCreation": "immediate",
    "prTitle": "{{semanticPrefix}}{{#if isPin}}Pin{{else}}Update{{/if}} dependency {{depName}} to version {{#if isRange}}{{newVersion}}{{else}}{{#if isMajor}}{{newVersionMajor}}.x{{else}}{{newVersion}}{{/if}}{{/if}}",
    "rebaseStalePrs": false,
    "recreateClosed": false,
    "repositoryUrl": "",
    "reviewers": Array [],
    "semanticCommits": false,
    "semanticPrefix": "chore: ",
    "upgradeType": "error",
  },
]
`;

exports[`lib/workers/package/index findUpgrades(config) returns warning if warning found 1`] = `
Array [
  Object {
    "assignees": Array [],
    "automerge": "none",
    "automergeType": "pr",
    "branchName": "renovate/{{depName}}-{{newVersionMajor}}.x",
    "commitMessage": "{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}",
    "depName": "foo",
    "group": Object {
      "branchName": "renovate/{{groupSlug}}",
      "commitMessage": "{{semanticPrefix}}Renovate {{groupName}} packages",
      "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request renovates the package group \\"{{groupName}}\\".

{{#each upgrades as |upgrade|}}
-   [{{upgrade.depName}}]({{upgrade.repositoryUrl}}): from \`{{upgrade.currentVersion}}\` to \`{{upgrade.newVersion}}\`
{{/each}}

{{#unless isPin}}
### Commits

{{#each upgrades as |upgrade|}}
{{#if upgrade.releases.length}}
<details>
<summary>{{upgrade.githubName}}</summary>
{{#each upgrade.releases as |release|}}

#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}){{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}
{{/each}}
{{/unless}}
<br />

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://keylocation.sg/our-tech/renovate).",
      "prTitle": "{{semanticPrefix}}Renovate {{groupName}} packages",
      "recreateClosed": true,
    },
    "groupName": null,
    "groupSlug": null,
    "labels": Array [],
    "lazyGrouping": true,
    "message": "bad version",
    "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request updates dependency [{{depName}}]({{repositoryUrl}}) from version \`{{currentVersion}}\` to \`{{newVersion}}\`
{{#if releases.length}}

### Commits

<details>
<summary>{{githubName}}</summary>

{{#each releases as |release|}}
#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}) {{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}
<br />

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://keylocation.sg/our-tech/renovate).",
    "prCreation": "immediate",
    "prTitle": "{{semanticPrefix}}{{#if isPin}}Pin{{else}}Update{{/if}} dependency {{depName}} to version {{#if isRange}}{{newVersion}}{{else}}{{#if isMajor}}{{newVersionMajor}}.x{{else}}{{newVersion}}{{/if}}{{/if}}",
    "rebaseStalePrs": false,
    "recreateClosed": false,
    "repositoryUrl": undefined,
    "reviewers": Array [],
    "semanticCommits": false,
    "semanticPrefix": "chore: ",
    "upgradeType": "warning",
  },
]
`;
